# pre-closing-daily

./: main.py  pyproject.toml
src/: main.py
test/: test_main.py
tests/: test_main.py
