[project]
name = "utils-days"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
]

[tool.pytest.ini_options]
addopts = "-v"
pythonpath = "."
testpaths = [
    "tests"
]
