[project]
name = "utils-days"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
]

[tool.pytest.ini_options]
addopts = "--cov=src -v"
pythonpath = "."
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover"
]

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "PL"
]
ignore = ["PLR2004"]